# nerust

./: .gitignore  .markdownlint-cli2.yaml  .ruff.toml  BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  UPSTREAM.md  deny.toml  gsu_demo.gsu  linkfile.lnk  pixel_test.gsu  release-plz.toml  renovate.json  rustfmt.toml  rustysole.code-workspace  sonar-project.properties  sprite_scaler.gsu
backend/opengl/: Cargo.toml
backend/opengl/src/: gl_renderer.rs  lib.rs
backend/wgpu/: Cargo.toml
backend/wgpu/src/: lib.rs
console/: Cargo.toml
console/src/: audio_backend.rs  console.rs  controller.rs  core_api.rs  lib.rs  runner.rs  screen_api.rs  state.rs  video.rs
console/src/runner/: data.rs  metrics.rs  persistence.rs  runtime.rs
console/src/state/: tests.rs
contract/core/: Cargo.toml
contract/core/src/: audio.rs  channel.rs  device.rs  identity.rs  input.rs  lib.rs  mirror.rs  options.rs  persistence.rs  rom.rs  save_state.rs  timer.rs
contract/persistence/: Cargo.toml
contract/persistence/src/: lib.rs
core/: Cargo.toml  build.rs  rom_tests.yaml
core/examples/: perf.rs
core/src/: cart_device.rs  cartridge_api.rs  cartridge_bus.rs  cartridge_data.rs  cartridge_data_parts.rs  cartridge_error.rs  cartridge_rom.rs  cartridge_runtime_state.rs  core.rs  interrupt.rs  lib.rs  mapper.rs  mapper_state.rs  persistence.rs  ppu_bus_event.rs  ppu_memory_access.rs  rom_test.rs  screen_api.rs
core/src/apu/: audio_regression_test.rs  dmc.rs  envelope.rs  fft_test.rs  frame_counter.rs  length_counter.rs  mod.rs  noise.rs  pulse.rs  timer.rs  triangle.rs
core/src/cartridge/: error.rs  mod.rs
core/src/cartridge_data/: ines.rs  mod.rs  nes20.rs
core/src/controller/: mod.rs  standard_controller.rs
core/src/cpu/: internal_stat.rs  interrupt.rs  memory.rs  mod.rs  oamdma.rs  register.rs  trace_jit.rs
core/src/glwrap/: mod.rs
core/src/gui/: mod.rs
core/src/nes/: interface.rs  mod.rs
core/src/ppu/: mod.rs  oam_trace.rs  spriteinfo.rs  tileinfo.rs
core/src/rom_test/: error.rs  manifest.rs  media.rs  mod.rs  runner.rs  tests.rs
core/src/status/: console_type.rs  mirror_mode.rs
core/tests/: lib.rs  macros.rs
core/tests/apu/: blargg_apu_2005_07_30.rs  mod.rs  test_apu_2.rs  test_apu_m.rs
core/tests/cpu/: branch_timing_tests.rs  cpu_dummy_reads.rs  cpu_dummy_writes.rs  cpu_exec_space.rs  cpu_flag_concurrency.rs  cpu_interrupts_v2.rs  cpu_reset.rs  cpu_timing_test6.rs  instr_misc.rs  instr_test_v5.rs  instr_timing.rs  mod.rs  nestest.rs
core/tests/mapper/: _2_test.rs  _34_test.rs  _3_test.rs  _7_test.rs  bntest.rs  bxrom_512k_test.rs  serom.rs
core/tests/ppu/: blargg_ppu_tests_2005_09_15b.rs  oam_read.rs  oam_stress.rs  ppu_open_bus.rs  ppu_read_buffer.rs  ppu_sprite_hit.rs  ppu_sprite_overflow.rs  ppu_vbl_nmi.rs  sprite_hit_tests_2005_10_05.rs  sprite_overflow_tests.rs  vbl_nmi_timing.rs
gui/glutin/: Cargo.toml
gui/glutin/src/: lib.rs  shell_api.rs
gui/gtk/: Cargo.toml
gui/gtk/resources/: about.xml  menu.xml  preferences.xml  ui.xml  window.glade
gui/gtk/src/: crash_handler.rs  glarea.rs  main.rs  window.rs
gui/gultin/: Cargo.toml
gui/gultin/src/: async_console.rs  lib.rs
gui/runtime/: Cargo.toml
gui/runtime/src/: console_api.rs  lib.rs  options.rs  rom.rs  rom_library.rs  session.rs  session_api.rs  settings.rs  shell.rs
gui/session/: Cargo.toml
gui/session/src/: console_api.rs  core.rs  input.rs  lib.rs  title.rs
gui/settings/: Cargo.toml
gui/settings/src/: app_state.rs  input.rs  language.rs  lib.rs  local.rs  shared.rs
gui/shell/: Cargo.toml
gui/shell/src/: context.rs  descriptor.rs  emu_core.rs  factory.rs  input.rs  keyboard_defaults.rs  lib.rs  load.rs  registry.rs  session.rs  settings.rs  shell_api.rs  state.rs  test_support.rs
gui/wgpu/: Cargo.toml
gui/wgpu/src/: app_menu.rs  lib.rs  main.rs  shader.wgsl  shell_api.rs  surface.rs  window.rs
input/nes/: Cargo.toml
input/nes/src/: codec.rs  frame.rs  input.rs  lib.rs  topology.rs
input/nes_runtime/: Cargo.toml
input/nes_runtime/src/: lib.rs  nes_input_cell.rs  nes_pad_device.rs  persisted.rs  topology.rs
keyboard/: Cargo.toml
keyboard/src/: error.rs  gdk.rs  iced.rs  lib.rs  tao.rs
nes/: Cargo.toml
nes/console/: Cargo.toml
nes/console/src/: lib.rs
nes/controller/: Cargo.toml
nes/controller/src/: input_buffer.rs  input_state.rs  lib.rs  nes_input_cell.rs  persisted.rs  topology.rs  touch.rs
nes/core/: Cargo.toml
nes/core/src/: cart_device.rs  cartridge_bus.rs  cartridge_data_parts.rs  cartridge_error.rs  cartridge_rom.rs  cartridge_runtime_state.rs  console_core.rs  core_options.rs  device.rs  input_types.rs  interrupt.rs  lib.rs  mapper.rs  mapper_state.rs  mirror.rs  persistence_codec.rs  persistence_error.rs  rom_format.rs  rom_identity.rs  rom_parse.rs  tests.rs
nes/device/: Cargo.toml
nes/device/src/: controller_profiles.rs  famicom_set.rs  lib.rs  nes_pad.rs  pad_common.rs  standard_pad.rs
nes/factory/: Cargo.toml
nes/factory/src/: adapter.rs  builder.rs  input_profiles.rs  input_state.rs  lib.rs  settings.rs
nes/runtime/: Cargo.toml
nes/runtime/src/: codec.rs  lib.rs  nes_input_cell.rs  persisted.rs  topology.rs
nes/settings/: Cargo.toml
nes/settings/src/: lib.rs
nes/src/: apu.rs  controller.rs  cpu.rs  lib.rs  ppu.rs  serialize.rs
nes/src/cartridge/: mod.rs
nes/src/cpu/: addressing_mode.rs  interrupt.rs  memory.rs  mod.rs  opcodes.rs  register.rs
nes/src/glwrap/: error.rs  mod.rs
nes/tests/: lib.rs  macros.rs
nesgui/: Cargo.toml
nesgui/src/: main.rs  main.rs.glium
persistence/: Cargo.toml
persistence/src/: archive.rs  error.rs  fs_ops.rs  lib.rs  metadata.rs  model.rs  sidecar.rs  slots.rs  tests.rs  thumbnail.rs  time.rs
render/gl/: Cargo.toml
rom_test/: Cargo.toml  build.rs  rom_tests.yaml
rom_test/src/: core_api.rs  error.rs  events.rs  harness.rs  lib.rs  manifest.rs  media.rs  perf.rs  report.rs  results.rs  runner.rs  serde_helpers.rs  tests.rs
rom_test/tests/: lib.rs
wgpuwrap/: Cargo.toml
wgpuwrap/src/: lib.rs  renderer.rs  shader.wgsl  surface.rs  upload.rs
(+994 files in other folders)
