[workspace]
resolver = "3"
members = [
  "backend/opengl",
  "backend/wgpu",

  "contract/core",
  "contract/emuthread",
  "gui/factory/nes",
  "gui/shared/settings",
  "persistence",
  "rom_test",
  "gui/frontends/android",
  "gui/frontends/gtk",
  "gui/frontends/tao",
  "gui/shared/runtime",
  "gui/shared/shell",
  "nes_ntsc",
  "screen/glwrap",
  "screen/opengl",
  "screen/wgpu",
  "screen/video",
  "serialize",
  "sound/cpal",
  "sound/openal",
  "sound/filter",
  "timer",
]
default-members = ["nes/core", "persistence"]

[profile.release]
debug = false

[profile.release.package.nerust_nes_core]
codegen-units = 1

[workspace.package]
version = "0.1.0-dev"
authors = ["chalharu"]
description = "NES emulator written in Rust"
license = "MPL-2.0"
repository = "https://github.com/chalharu/nerust"
homepage = "https://github.com/chalharu/nerust"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
alto = { version = "=3.0.4" }
android_logger = { version = "=0.15.1" }
bitflags = { version = "=2.13.0", features = ["serde"] }
clap = { version = "=4.6.1" }
cpal = { version = "=0.17.3" }
crc = { version = "=3.4.0" }
directories = { version = "=6.0.0" }
epoxy = { version = "=0.1.0" }
fs2 = { version = "=0.4.3" }
gdk = { version = "=0.11.2", package = "gdk4" }
gio = { version = "=0.22.6" }
gl = { version = "=0.14.0" }
gtk = { version = "=0.11.3", package = "gtk4" }
hound = { version = "=3.5.1" }
iced = { version = "=0.14.0" }
iced_tiny_skia = { version = "=0.14.0" }
iced_winit = { version = "=0.14.0" }
jni = { version = "=0.22.4" }
lazy_static = { version = "=1.5.0" }
libc = { version = "=0.2.186" }
log = { version = "=0.4.32", default-features = false }
muda = { version = "=0.19.3", default-features = false, features = ["gtk"] }
nerust_contract_core = { path = "contract/core" }
nerust_contract_emuthread = { path = "contract/emuthread" }
nerust_factory_nes = { path = "gui/factory/nes" }
nerust_gui_settings = { path = "gui/shared/settings" }
nerust_nes_core = { path = "nes/core" }
nerust_nes_device = { path = "nes/device" }
nerust_gui_runtime = { path = "gui/shared/runtime" }
nerust_gui_shell = { path = "gui/shared/shell" }
nerust_input_schema = { path = "input/schema" }
nerust_input_nes_runtime = { path = "input/nes_runtime" }
nerust_persistence = { path = "persistence" }
nerust_rom_test = { path = "rom_test" }
nerust_backend_opengl = { path = "backend/opengl" }
nerust_backend_wgpu = { path = "backend/wgpu" }
nerust_glwrap = { path = "screen/glwrap" }
nerust_screen_opengl = { path = "screen/opengl" }
nerust_screen_wgpu = { path = "screen/wgpu" }
nerust_screen_video = { path = "screen/video" }
nerust_serialize = { path = "serialize" }
nerust_sound_cpal = { path = "sound/cpal" }
nerust_sound_openal = { path = "sound/openal" }
nerust_soundfilter = { path = "sound/filter" }
nerust_timer = { path = "timer" }
nes_ntsc = { path = "nes_ntsc" }
pollster = { version = "=0.4.0" }
png = { version = "=0.18.1" }
rmp-serde = { version = "=1.3.1" }
raw-window-handle = { version = "=0.6.2" }
rfd = { version = "=0.17.2" }
serde = { version = "=1.0.228", default-features = false }
serde_bytes = { version = "=0.11.19" }
serde_yaml = { version = "=0.9.34" }
shared_library = { version = "=0.1.9" }
simple_logger = { version = "=5.2.0" }
strum = { version = "=0.28.0" }
strum_macros = { version = "=0.28.0" }
tao = { version = "=0.35.3" }
thiserror = { version = "=2.0.18" }
typetag = { version = "=0.2.22" }
wgpu = { version = "=29.0.3" }
winit = { version = "=0.30.13" }
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
