[workspace]
resolver = "3"
members = [
  "traits/core",
  "traits/emu-thread",
  "traits/input",
  "nes/core",
  "nes/device",
  "nes/factory",
  "nes/controller",
  "gui/settings",
  "gui/run-options",
  "gui/runtime",
  "gui/shell",
  "gui/frontends/android",
  "gui/frontends/gtk",
  "gui/frontends/tao",
  "persistence",
  "render/base",
  "render/gl",
  "render/glwrap",
  "render/ntsc",
  "render/softbuffer",
  "render/wgpu",
  "serialize",
  "sound/cpal",
  "sound/cubeb",
  "sound/filter",
  "timer",
  "rom_test",
]
default-members = [".", "nes/core"]

[package]
name = "nerust"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
nerust_nes_factory.workspace = true
nerust_gui_runtime.workspace = true
nerust_gui_shell.workspace = true
nerust_run_options.workspace = true
nerust_gtk = { workspace = true, optional = true }
nerust_tao = { workspace = true, optional = true }
nerust_render_gl = { workspace = true, optional = true }
nerust_render_softbuffer = { workspace = true, optional = true }
nerust_render_wgpu = { workspace = true, optional = true }
nerust_core_traits.workspace = true
nerust_render_base.workspace = true
nerust_sound_cpal = { workspace = true, optional = true }
nerust_sound_cubeb = { workspace = true, optional = true }
simple_logger.workspace = true

[features]
default = ["wgpu"]
gtk = ["nerust_gtk", "nerust_sound_cpal", "nerust_sound_cubeb"]
tao = ["nerust_tao", "nerust_sound_cpal", "nerust_sound_cubeb"]
wgpu = ["nerust_render_wgpu"]
softbuffer = ["nerust_render_softbuffer"]
opengl = ["nerust_render_gl"]

[profile.release]
debug = false

[profile.release.package.nerust_nes_core]
codegen-units = 1

[workspace.package]
version = "0.1.0-dev"
authors = ["chalharu"]
description = "NES emulator written in Rust"
license = "MPL-2.0"
repository = "https://github.com/chalharu/nerust"
homepage = "https://github.com/chalharu/nerust"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
android_logger = { version = "=0.15.1" }
bitflags = { version = "=2.13.0", features = ["serde"] }
clap = { version = "=4.6.1" }
cpal = { version = "=0.18.1" }
cubeb = { version = "=0.35.3" }
crc = { version = "=3.4.0" }
directories = { version = "=6.0.0" }
flume = { version = "=0.12.0" }
fs2 = { version = "=0.4.3" }
gdk = { version = "=0.11.4", package = "gdk4" }
gio = { version = "=0.22.8" }
gl = { version = "=0.14.0" }
glutin = { version = "=0.32.3" }
gtk = { version = "=0.11.4", package = "gtk4" }
gdk-macos = { version = "=0.11.0", package = "gdk4-macos" }
gdk-win32 = { version = "=0.11.0", package = "gdk4-win32" }
gdk4-wayland-sys = { version = "=0.11.0" }
gdk4-x11-sys = { version = "=0.11.0" }
hound = { version = "=3.5.1" }
iced = { version = "=0.14.0", default-features = false, features = ["tiny-skia", "thread-pool", "x11", "wayland"] }
time = { version = "=0.3.53" }
iced_tiny_skia = { version = "=0.14.0" }
iced_winit = { version = "=0.14.0" }
jni = { version = "=0.22.4" }
lazy_static = { version = "=1.5.0" }
log = { version = "=0.4.33", default-features = false }
muda = { version = "=0.19.3", default-features = false, features = ["gtk"] }
nerust_core_traits = { path = "traits/core" }
nerust_emu_thread = { path = "traits/emu-thread" }
nerust_nes_factory = { path = "nes/factory" }
nerust_gui_settings = { path = "gui/settings" }
nerust_run_options = { path = "gui/run-options" }
nerust_nes_core = { path = "nes/core" }
nerust_nes_device = { path = "nes/device" }
nerust_gui_runtime = { path = "gui/runtime" }
nerust_gui_shell = { path = "gui/shell" }
nerust_input_traits = { path = "traits/input" }
nerust_nes_controller = { path = "nes/controller" }
nerust_persistence = { path = "persistence" }
nerust_rom_test = { path = "rom_test" }
nerust_glwrap = { path = "render/glwrap" }
nerust_render_gl = { path = "render/gl" }
nerust_render_wgpu = { path = "render/wgpu" }
nerust_render_base = { path = "render/base" }
nerust_render_softbuffer = { path = "render/softbuffer" }
nerust_serialize = { path = "serialize" }
nerust_sound_cpal = { path = "sound/cpal" }
nerust_sound_cubeb = { path = "sound/cubeb" }
nerust_sound_filter = { path = "sound/filter" }
nerust_timer = { path = "timer" }
nerust_gtk = { path = "gui/frontends/gtk" }
nerust_tao = { path = "gui/frontends/tao" }
nerust_android = { path = "gui/frontends/android" }
nerust_render_ntsc = { path = "render/ntsc" }
objc2 = { version = "=0.6.4" }
objc2-app-kit = { version = "=0.3.2" }
objc2-quartz-core = { version = "=0.3.2" }
pollster = { version = "=0.4.0" }
png = { version = "=0.18.1" }
rmp-serde = { version = "=1.3.1" }
raw-window-handle = { version = "=0.6.2" }
rfd = { version = "=0.17.2" }
serde = { version = "=1.0.228", default-features = false }
serde_bytes = { version = "=0.11.19" }
serde_yaml = { version = "=0.9.34" }
simple_logger = { version = "=5.2.0" }
softbuffer = { version = "=0.4.8" }
strum = { version = "=0.28.0" }
strum_macros = { version = "=0.28.0" }
tao = { version = "=0.35.3" }
thiserror = { version = "=2.0.18" }
typetag = { version = "=0.2.22" }
wgpu = { version = "=30.0.0" }
winit = { version = "=0.30.13" }
zerocopy = { version = "=0.8.52", features = ["derive"] }
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
