[workspace]
default-members = [".", "nes/core"]
members = [
  "gui/frontends/android",
  "gui/frontends/gtk",
  "gui/frontends/tao",
  "gui/run-options",
  "gui/runtime",
  "gui/settings",
  "gui/shell",
  "keyboard",
  "nes/controller",
  "nes/core",
  "nes/device",
  "nes/factory",
  "nes/settings",
  "persistence",
  "render/filters",
  "render/gl",
  "render/glwrap",
  "render/ntsc",
  "render/softbuffer",
  "render/traits",
  "render/wgpu",
  "rom_test",
  "serialize",
  "sound/cpal",
  "sound/cubeb",
  "sound/filter",
  "timer",
  "traits/core",
  "traits/emu-thread",
  "traits/input",
  "traits/settings",
]
resolver = "3"

[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "nerust"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
nerust_core_traits.workspace = true
nerust_gtk = { optional = true, workspace = true }
nerust_gui_runtime.workspace = true
nerust_gui_shell.workspace = true
nerust_nes_factory.workspace = true
nerust_render_gl = { optional = true, workspace = true }
nerust_render_softbuffer = { optional = true, workspace = true }
nerust_render_traits.workspace = true
nerust_render_wgpu = { optional = true, workspace = true }
nerust_run_options.workspace = true
nerust_sound_cpal = { optional = true, workspace = true }
nerust_sound_cubeb = { optional = true, workspace = true }
nerust_tao = { optional = true, workspace = true }
simple_logger.workspace = true

[features]
default = ["wgpu"]
gtk = ["nerust_gtk", "nerust_sound_cpal", "nerust_sound_cubeb"]
opengl = ["nerust_render_gl"]
softbuffer = ["nerust_render_softbuffer"]
tao = ["nerust_sound_cpal", "nerust_sound_cubeb", "nerust_tao"]
wgpu = ["nerust_render_wgpu"]

[profile.dev]
opt-level = 3

[profile.release]
debug = false

[profile.release.package.nerust_nes_core]
codegen-units = 1

[workspace.package]
authors = ["chalharu"]
description = "NES emulator written in Rust"
edition = "2024"
homepage = "https://github.com/chalharu/nerust"
license = "MPL-2.0"
repository = "https://github.com/chalharu/nerust"
rust-version = "1.89"
version = "0.1.0-dev"

[workspace.dependencies]
android_logger = { version = "=0.15.1" }
bitflags = { features = ["serde"], version = "=2.13.1" }
clap = { features = ["derive"], version = "=4.6.2" }
cpal = { version = "=0.18.1" }
crc = { version = "=3.4.0" }
cubeb = { version = "=0.36.0" }
directories = { version = "=6.0.0" }
downcast-rs = { version = "=2.0.2" }
dyn-clone = { version = "=1.0.20" }
dyn-eq = { version = "=0.1.3" }
flume = { version = "=0.12.0" }
gdk = { package = "gdk4", version = "=0.11.4" }
gdk-macos = { package = "gdk4-macos", version = "=0.11.0" }
gdk-win32 = { package = "gdk4-win32", version = "=0.11.0" }
gdk4-wayland-sys = { version = "=0.11.0" }
gdk4-x11-sys = { version = "=0.11.0" }
gio = { version = "=0.22.8" }
gl = { default-features = false, version = "=0.14.0" }
glutin = { version = "=0.32.3" }
gtk = { package = "gtk4", version = "=0.11.4" }
hound = { version = "=3.5.1" }
iced = { default-features = false, features = [
  "thread-pool",
  "tiny-skia",
  "wayland",
  "x11",
], version = "=0.14.0" }
iced_tiny_skia = { version = "=0.14.0" }
iced_winit = { version = "=0.14.0" }
jni = { version = "=0.22.4" }
log = { default-features = false, version = "=0.4.33" }
muda = { default-features = false, features = ["gtk"], version = "=0.19.3" }
nerust_android = { path = "gui/frontends/android" }
nerust_core_traits = { path = "traits/core" }
nerust_emu_thread = { path = "traits/emu-thread" }
nerust_glwrap = { path = "render/glwrap" }
nerust_gtk = { path = "gui/frontends/gtk" }
nerust_gui_runtime = { path = "gui/runtime" }
nerust_gui_settings = { path = "gui/settings" }
nerust_gui_shell = { path = "gui/shell" }
nerust_input_traits = { path = "traits/input" }
nerust_keyboard = { default-features = false, path = "keyboard" }
nerust_nes_controller = { path = "nes/controller" }
nerust_nes_core = { path = "nes/core" }
nerust_nes_device = { path = "nes/device" }
nerust_nes_factory = { path = "nes/factory" }
nerust_nes_settings = { path = "nes/settings" }
nerust_persistence = { path = "persistence" }
nerust_render_filters = { path = "render/filters" }
nerust_render_gl = { path = "render/gl" }
nerust_render_ntsc = { path = "render/ntsc" }
nerust_render_softbuffer = { path = "render/softbuffer" }
nerust_render_traits = { path = "render/traits" }
nerust_render_wgpu = { path = "render/wgpu" }
nerust_rom_test = { path = "rom_test" }
nerust_run_options = { path = "gui/run-options" }
nerust_serialize = { path = "serialize" }
nerust_settings_traits = { path = "traits/settings" }
nerust_sound_cpal = { path = "sound/cpal" }
nerust_sound_cubeb = { path = "sound/cubeb" }
nerust_sound_filter = { path = "sound/filter" }
nerust_tao = { path = "gui/frontends/tao" }
nerust_timer = { path = "timer" }
objc2 = { default-features = false, version = "=0.6.4" }
objc2-app-kit = { default-features = false, features = [
  "NSResponder",
  "NSView",
  "NSWindow",
  "objc2-core-foundation",
  "objc2-quartz-core",
], version = "=0.3.2" }
objc2-quartz-core = { default-features = false, features = [
  "objc2-core-foundation",
], version = "=0.3.2" }
png = { version = "=0.18.1" }
pollster = { version = "=1.0.1" }
raw-window-handle = { version = "=0.6.2" }
rfd = { version = "=0.17.2" }
rmp-serde = { version = "=1.3.1" }
serde = { default-features = false, version = "=1.0.229" }
serde-saphyr = { version = "=0.0.29" }
serde_bytes = { version = "=0.11.19" }
serde_json = { version = "=1.0.150" }
simple_logger = { version = "=5.2.0" }
softbuffer = { version = "=0.4.8" }
strum = { features = ["derive"], version = "=0.28.0" }
tao = { version = "=0.35.3" }
thiserror = { version = "=2.0.19" }
time = { version = "=0.3.53" }
typetag = { version = "=0.2.23" }
wgpu = { version = "=30.0.0" }
winit = { version = "=0.30.13" }
zerocopy = { features = ["derive"], version = "=0.8.54" }
zip = { default-features = false, features = ["deflate"], version = "=8.6.0" }
