[package]
name = "nerust_console"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
oam-trace = ["nerust_core/oam-trace"]

[dependencies]
bitflags.workspace = true
crc.workspace = true
log.workspace = true
nerust_cartridge_data.workspace = true
nerust_core.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_filter.workspace = true
nerust_screen_traits.workspace = true
nerust_sound_traits.workspace = true
nerust_timer.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
