[package]
name = "nerust_console"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_cartridge_data.workspace = true
nerust_contract_controller_runtime.workspace = true
nerust_contract_options.workspace = true
nerust_contract_persistence.workspace = true
nerust_contract_rom.workspace = true
nerust_core.workspace = true
nerust_crc64_hasher.workspace = true
nerust_input_nes.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_filter.workspace = true
nerust_screen_logical.workspace = true
nerust_screen_physical.workspace = true
nerust_screen_video.workspace = true
nerust_sound_traits.workspace = true
nerust_timer.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
