[package]
name = "nerust_console"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_contract_core.workspace = true
nerust_contract_emuthread.workspace = true
nerust_nes_core.workspace = true
nerust_screen_video.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
