[package]
name = "nerust_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
nerust_screen_traits.workspace = true
nerust_serialize.workspace = true
nerust_sound_traits.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_derive.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
typetag.workspace = true

[dev-dependencies]
crc.workspace = true
hound.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_filter.workspace = true
