[package]
name = "nerust_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
crc.workspace = true
log.workspace = true
nerust_contract.workspace = true
nerust_screen_traits.workspace = true
nerust_serialize.workspace = true
nerust_sound_traits.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_derive.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
typetag.workspace = true

[dev-dependencies]
hound.workspace = true
