[package]
name = "nerust_keyboard"
version.workspace = true
authors.workspace = true
description = "Platform-agnostic keyboard key code type with From implementations"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
gdk = ["dep:gdk"]
iced = ["dep:iced"]
tao = ["dep:tao"]

[dependencies]
gdk = { workspace = true, optional = true }
iced = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
tao = { workspace = true, optional = true }
