[package]
authors.workspace = true
description = "Platform-agnostic keyboard key code type with From implementations"
edition.workspace = true
license.workspace = true
name = "nerust_keyboard"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
error = ["dep:thiserror"]
gdk = ["dep:gdk", "error"]
iced = ["dep:iced", "error"]
tao = ["dep:tao", "error"]

[dependencies]
gdk = { optional = true, workspace = true }
iced = { optional = true, workspace = true }
serde = { features = ["derive"], workspace = true }
tao = { optional = true, workspace = true }
thiserror = { optional = true, workspace = true }

[dev-dependencies]
strum.workspace = true
