[package]
name = "nesgui"
version = "0.1.0"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]

[dependencies]
# nes = {path = "../nes"}
glutin = "*"
gl = "*"
# glium = "*"
simple_logger = "*"
failure = { version = ">=0.0.0" }
log = { version = ">=0.0.0", default-features = false }
serde = { version = ">=0.0.0", default-features = false }
serde_derive = { version = ">=0.0.0", default-features = false }
serde_bytes = { version = ">=0.0.0" }
bitflags = { version = ">=0.0.0" }
alto = "*"
