[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nerust_persistence"
rust-version.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
nerust_core_traits.workspace = true
png.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
time = { features = ["formatting", "local-offset", "macros"], workspace = true }
zip.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[target.'cfg(windows)'.dependencies]
windows-sys = { features = ["Win32_Storage_FileSystem"], version = "=0.61.2" }
