[package]
name = "nerust_rom_test"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
crc.workspace = true

nerust_contract_core.workspace = true
nerust_nes_core.workspace = true
# Buttons from nerust_nes_core::input_types
nerust_input_nes_runtime.workspace = true
nerust_nes_device.workspace = true
nerust_screen_video.workspace = true
png.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
