[package]
name = "nerust_rom_test"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
clap.workspace = true
crc.workspace = true
nerust_core_traits.workspace = true
nerust_input_traits.workspace = true
nerust_nes_core.workspace = true
nerust_nes_device.workspace = true
nerust_render_base.workspace = true
png.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
