[package]
name = "nerust_backend_opengl"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glutin.workspace = true
log.workspace = true
nerust_screen_opengl.workspace = true
nerust_screen_video.workspace = true
raw-window-handle.workspace = true
