[package]
name = "nerust_backend_wgpu"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_screen_filter.workspace = true
nerust_screen_traits.workspace = true
nerust_screen_wgpu.workspace = true
nerust_wgpuwrap.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
