[package]
name = "nerust_backend_wgpu"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_screen_video.workspace = true
nerust_screen_wgpu.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true
