[package]
name = "nerust_contract_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nerust_input_schema.workspace = true
nerust_screen_video.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
