[package]
name = "nerust_contract_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nerust_input_schema.workspace = true
nerust_screen_video.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true

# Optional: backend probing
cpal = { workspace = true, optional = true }
alto = { workspace = true, optional = true }

[features]
default = ["cpal", "openal"]
openal = ["alto"]
