[package]
name = "nerust_contract_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_contract_input.workspace = true
nerust_screen_video.workspace = true
serde.workspace = true
thiserror.workspace = true
