[package]
name = "nerust_glutin"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
nerust_console.workspace = true
nerust_core.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_filter.workspace = true
nerust_screen_opengl.workspace = true
nerust_screen_traits.workspace = true
nerust_sound_openal.workspace = true
nerust_timer.workspace = true
raw-window-handle.workspace = true
simple_logger.workspace = true
winit.workspace = true
