[package]
name = "nerust_gtk"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
epoxy.workspace = true
gdk.workspace = true
gio.workspace = true
gl.workspace = true
gtk.workspace = true
log.workspace = true
nerust_console.workspace = true
nerust_core.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_filter.workspace = true
nerust_screen_opengl.workspace = true
nerust_screen_traits.workspace = true
nerust_sound_openal.workspace = true
nerust_timer.workspace = true
shared_library.workspace = true
simple_logger.workspace = true
