[package]
name = "nerust_gtk"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
epoxy.workspace = true
gdk.workspace = true
gio.workspace = true
gl.workspace = true
gtk.workspace = true
libc.workspace = true
log.workspace = true
nerust_backend_opengl.workspace = true
nerust_gui_runtime.workspace = true
nerust_gui_shell.workspace = true
nerust_screen_traits.workspace = true
nerust_sound_openal.workspace = true
shared_library.workspace = true
simple_logger.workspace = true
