[package]
name = "nerust_gui_runtime"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crc.workspace = true
directories.workspace = true
log.workspace = true
nerust_core_traits.workspace = true
nerust_gui_settings.workspace = true
nerust_persistence.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
thiserror.workspace = true
