[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nerust_gui_runtime"
version.workspace = true

[dependencies]
crc.workspace = true
directories.workspace = true
log.workspace = true
nerust_core_traits.workspace = true
nerust_gui_settings.workspace = true
nerust_keyboard = { default-features = false, workspace = true }
nerust_nes_settings.workspace = true
nerust_persistence.workspace = true
nerust_settings_traits.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
thiserror.workspace = true
