[package]
name = "nerust_gui_session"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_console.workspace = true
nerust_contract.workspace = true
nerust_screen_traits.workspace = true

[dev-dependencies]
nerust_screen_filter.workspace = true
nerust_sound_traits.workspace = true
