[package]
name = "nerust_gui_shell"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
nerust_core_traits.workspace = true
nerust_emu_thread.workspace = true
nerust_gui_settings.workspace = true
nerust_gui_runtime.workspace = true
nerust_input_traits.workspace = true
nerust_persistence.workspace = true
nerust_render_traits.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true

nerust_settings_traits.workspace = true
nerust_nes_settings.workspace = true
nerust_keyboard = { workspace = true, default-features = false }
[dev-dependencies]
nerust_core_traits.workspace = true
