[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nerust_gui_shell"
rust-version.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
nerust_core_traits.workspace = true
nerust_emu_thread.workspace = true
nerust_gui_runtime.workspace = true
nerust_gui_settings.workspace = true
nerust_input_traits.workspace = true
nerust_persistence.workspace = true
nerust_render_traits.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true

nerust_keyboard = { default-features = false, workspace = true }
nerust_nes_settings.workspace = true
nerust_settings_traits.workspace = true
[dev-dependencies]
clap.workspace = true
nerust_core_traits.workspace = true
