[package]
name = "nerust_wgpu"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
nerust_console.workspace = true
nerust_core.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_filter.workspace = true
nerust_screen_traits.workspace = true
nerust_sound_openal.workspace = true
nerust_timer.workspace = true
pollster.workspace = true
simple_logger.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
muda.workspace = true
raw-window-handle.workspace = true
